Заміна мови та додання розмітки навчання.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>   
 <!-- Мій коментар -->
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +8,86 @@
     <title>Training and delete</title>
 </head>
 <body>
-    <div>Privet!!!</div>
+    <div>Privet!!! Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque numquam dolore dicta fuga ratione rem nostrum dolores ullam sapiente labore? Quod inventore ab debitis sequi, laborum dolor reiciendis quia ducimus corrupti amet. Repudiandae nesciunt architecto perferendis fugit laudantium eligendi libero quas inventore voluptates laborum dignissimos aperiam accusamus officia vitae voluptatum reiciendis alias delectus, iure odit explicabo provident amet sequi atque numquam? Ex officia quia, quas repellendus, facere, molestiae molestias ut ab accusantium nihil voluptates et? Eum repellat non aperiam explicabo ut quod dolorum deserunt fugit perspiciatis necessitatibus, veritatis ad corporis, iure nemo. Voluptatem ullam amet ipsum porro vitae, neque minus!</div>
+    <p>
+        <a href="squoosh.app">Squoosh</a> - сервис <em>оптимизации</em> изображений.
+    </p>
+    
+    <p>Преимущества</p>
+    <ul>
+        <li>Работает в браузере</li>
+        <li>Не грузит систему</li>
+        <li>Удобный интерфейс</li>
+    </ul>
+
+    <!-- Абзац это блочный элемент -->
+    <p>Блочный элемент 3</p>
+    <p>Блочный элемент 3</p>
+    <p>Блочный элемент 3</p>
+    
+    <!-- Ссылка это строчный элемент -->
+    <a href="">Строчный элемент 1</a>
+    <a href="">Строчный элемент 2</a>
+    <a href="">Строчный элемент 3</a>
+
+    <p>Как приготовить яичницу. Действуй попорядку!</p>
+    <ol>
+        <li>Возьми яйцо</li>
+        <li>Разбей шкарлупу яйца ударом лезвия ножа</li>
+        <li>Разьедени две половины шкарлупы над разогретой сковородой так чтобы содержимое яйца вылелось на сковороду </li>
+        <li>Накрой крышкой и выжди 1 минуту</li>
+        <li>Открой крышку и переложи яйцо лопаткой себе в тарелку</li>
+    </ol>
+    <p>Приятного аппетита=)</p>
+
+    <a href="https://google.com" target="_blank">Тыць)</a>
+
+    <a href="https://www.pexels.com/photo/animals-sweet-cat-kitty-57416/">
+        <img src="https://images.pexels.com/photos/57416/cat-sweet-kitty-animals-57416.jpeg?w=640" alt="Рыжий кот"
+            width="300" />
+    </a>
+
+    <figure>
+        <!-- Произвольный графический контент: фотография, график, диаграмма и т. п. -->
+        <img src="https://images.pexels.com/photos/57416/cat-sweet-kitty-animals-57416.jpeg?w=640" alt="альтернативный текст" />
+        <figcaption>Текст пояснения который будет под изображением</figcaption>
+    </figure>
+
+    <ul>
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+    </ul>
+
+<table>
+    <caption>
+    Расписание поездов
+    </caption>
+  <thead>
+    <tr>
+      <th>Номер</th>
+      <th>Маршрут</th>
+      <th>Время в пути</th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <tr>
+      <td>433</td>
+      <td>Киев - Ковель</td>
+      <td>5 часов</td>
+    </tr>
+    <tr>
+      <td>701</td>
+      <td>Харьков - Днепр</td>
+      <td>7 часов</td>
+    </tr>
+    <tr>
+      <td>258</td>
+      <td>Львов - Одесса</td>
+      <td>4 часа</td>
+    </tr>
+  </tbody>
+</table>
 </body>
 </html>
